# ous-price-track

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COOLIFY_DEPLOY.md  DEVELOPMENT_CONTEXT.md  Dockerfile  GEMINI.md  MIMO.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: get_secrets.yml  monitor.yml  snapshot.yml
data/: MEMORY.md  prices.db  produtos.html
src/ous_monitor/: categories.py  cli.py  dotenv.py  filters.py  gender.py  html_generator.py  models.py  notifier.py  server.py  services.py  sizes.py  sources.py  storage.py
src/ous_monitor/scrapers/: approve.py  base.py  baw.py  centauro.py  netshoes.py  ous.py  umbro.py
tests/: test_filters.py  test_netshoes_retry.py  test_sources.py  test_storage.py  test_storage_services.py  test_summary.py
