[project]
name = "ous-price-monitor"
version = "0.1.0"
description = "Monitora promoções da marca OUS em ous.com.br, centauro.com.br e netshoes.com.br"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "curl_cffi>=0.7",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "google-antigravity",
]

[project.scripts]
ous-monitor = "ous_monitor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
